--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -5,7 +5,21 @@
 }
 
 
-
+.navbar-brand {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    font-size: 24px;
+    font-weight: bold;
+  }
+  
+  .navbar-brand img {
+    height: 50px; 
+    width: auto;
+    margin-right: 10px; 
+    border-radius: 5px; 
+  }
+  
 
 
 .header {
@@ -1957,4 +1971,118 @@ hr {
 
 .profile-container:hover .hover-options {
     display: block;
+}
+
+
+.noti-dropdown {
+    position: absolute;
+    top: 60px;
+    right: 0; 
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15);
+    padding: 12px;
+    width: 300px; 
+    font-size: 12px;
+    z-index: 1000; 
+    display: none;
+}
+
+.noti {
+    position: relative; 
+    display: inline-block;
+}
+
+.noti-dropdown ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.noti-dropdown ul li {
+    align-items: flex-start;
+    gap: 10px;
+    font-size: 12px; 
+    padding: 10px 12px;
+    border-bottom: 1px solid #ddd;
+    border-radius: 6px;
+    line-height: 1.7;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    white-space: normal; 
+    position: relative;
+    padding-left: 10px; 
+}
+.noti-dropdown ul li i {
+    flex-shrink: 0;
+}
+
+.noti-dropdown ul li:last-child {
+    border-bottom: none;
+}
+
+.noti-dropdown ul li .before-icon {
+    font-size: 16px; 
+    color: #b22222;
+    flex-shrink: 0;
+}
+
+.noti-dropdown ul li strong {
+    font-size: 14px;
+    font-weight: bold;
+    color: black;
+    flex-shrink: 0;
+    left: 10px;
+}
+
+.noti-dropdown ul li a {
+    color: #b22222;
+    font-weight: bold;
+    text-decoration: none;
+    white-space: nowrap; 
+}
+
+.noti-dropdown .for-center {
+    text-decoration: none;
+    text-align: center;
+    color: #b22222;
+    background-color: #f5f5f5;
+    height: 40px;
+    align-items: center;
+    justify-content: center;
+    padding-top: 10px;
+    border-radius: 15px;
+}
+
+
+.noti-dropdown .for-center a {
+    text-decoration: none;
+    color: #b22222;
+    font-size: 15px;
+    bottom: 0
+    ;
+    padding-top: 200px;
+}
+
+.noti-dropdown .for-center a:hover {
+    text-decoration: underline;
+}
+
+
+.notif {
+    position: relative;
+    display: inline-block;
+    background-color: beige;
+    border-radius: 50%;
+    height: auto;
+    width: 40px;
+    text-align: center;
+    align-items: center;
+    gap: 20px;
+}
+
+.notif i{
+    font-size: 22px;
+    color: #4a4a4a;
+    padding: 10px;
 }
