--- a/css/notification.css
+++ b/css/notification.css
@@ -737,3 +737,18 @@ body{
 .profile-container:hover .hover-options {
     display: block;
 }
+
+.navbar-brand {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    font-size: 24px;
+    font-weight: bold;
+  }
+  
+  .navbar-brand img {
+    height: 50px; 
+    width: auto;
+    margin-right: 10px; 
+    border-radius: 5px; 
+  }
